# the-reflected-signal-simulator

./: .gitignore  CMakeLists.txt  README.md  presentation.pptx  ~$presentation.pptx
build-simulator_window-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
build-simulator_window-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-415abfcffb0ca5bca925.json  cmakeFiles-v1-eb7c9c62c6e98a3c7b4b.json  codemodel-v2-87f9917e527ae66ae2eb.json  directory-.-Debug-606560f0783000b4e820.json  index-2024-03-30T08-31-54-0208.json  target-simulator_window-Debug-116388a9e93cba9146ae.json  target-simulator_window_autogen-Debug-2f84bcd5f09aabcc9ef0.json
build-simulator_window-Desktop-Debug/.qt/: QtDeploySupport.cmake
build-simulator_window-Desktop-Debug/simulator_window_autogen/: mocs_compilation.cpp
build-simulator_window-Desktop-Debug/simulator_window_autogen/EWIEGA46WW/: moc_simulatorwindow.cpp  moc_simulatorwindow.cpp.d
build-simulator_window-Desktop-Debug/simulator_window_autogen/include/: ui_simulatorwindow.h
lib/: CMakeLists.txt
lib/field/: field.cpp  field.h
lib/object/: object.cpp  object.h
lib/rls/: rls.cpp  rls.h
lib/signal/: signal.h
lib/vector3d/: vector3d.cpp  vector3d.h
simulator/: CMakeLists.txt  main.cpp
simulator_window/: CMakeLists.txt  main.cpp  simulatorwindow.cpp  simulatorwindow.h  simulatorwindow.ui
src/: CMakeLists.txt
src/app/: CMakeLists.txt  grid_widget.cpp  grid_widget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.cpp  qcustomplot.h
src/backend/: CMakeLists.txt  field.cpp  field.h  object.cpp  object.h  rls.h  signal.cpp  signal.h  vector3d.cpp  vector3d.h
src/backend/field/: field.cpp  field.h
src/backend/object/: object.cpp  object.h
src/backend/rls/: rls.cpp  rls.h
src/backend/signal/: signal.cpp  signal.h
src/backend/vector3d/: vector3d.cpp  vector3d.h
src/results/: name1.txt  name2.txt
